k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-java
  namespace: default
  labels:
    app: k8s-java
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30090 #service对外开放端口
  selector:
    app: k8s-java
