k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: easonsu-ingress
spec:
  rules:
    # 配置七层域名
    - host: www.easonsu.com
      http:
        paths:
          # 配置Context Path
          - path: /hello
            backend:
              serviceName: k8s-java
              servicePort: 80
          # 配置Context Path
          - path: /coffee
            backend:
              serviceName: coffee-svc
              servicePort: 80
